<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
<TableLayout 
        android:id="@+id/TableLayout01"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:stretchColumns="1" 
        android:gravity="center">
        <TableRow android:id="@+id/TableRow01" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content">
        <TextView 
            android:id="@+id/info_TextViewShopName" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:textSize="20sp" 
            android:text="@string/shop_name"></TextView>
        
        <TextView android:id="@+id/info_ViewShopName" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
          />
        
</TableRow>
<TableRow 
    android:id="@+id/TableRow02" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
<TextView 
    android:id="@+id/info_TextViewPhone" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:textSize="20sp" 
    android:text="@string/shop_phone"></TextView>

<TextView 
    android:id="@+id/info_TextPhone" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    
    
    />

</TableRow>
<TableRow 
    android:id="@+id/TableRow03" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
<TextView 
    android:id="@+id/info_TextViewAddress" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:textSize="20sp" 
    android:text="@string/shop_address"></TextView>

<TextView 
    android:id="@+id/info_TextAddress" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    
    />

</TableRow>
<TableRow 
    android:id="@+id/TableRow04" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
<TextView 
    android:id="@+id/info_TextViewTime" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:textSize="20sp"  
    android:text="@string/shop_time"
    ></TextView>

<TextView 
    android:id="@+id/info_TextTime" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:layout_marginRight="10dip"
    
    />
</TableRow>

<TableRow 
    android:id="@+id/TableRow11" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
<TextView 
    android:id="@+id/info_TextViewDist" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:textSize="20sp"  
    android:text="@string/shop_dist"
    ></TextView>

<TextView 
    android:id="@+id/info_TextDist" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:layout_marginRight="10dip"
    
    />
</TableRow>

<TableRow 
    android:id="@+id/TableRow09" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
<TextView 
    android:id="@+id/info_TextViewDesc" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:textSize="20sp"  
    android:text="@string/shop_des"></TextView>



</TableRow>
 <TextView 
    android:id="@+id/info_TextDesc" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:textSize="12sp"
    android:layout_marginLeft="30dip"
    android:layout_marginRight="10dip"
    />








  </TableLayout>  

<fragment
    android:id="@+id/mapShop"
    android:layout_width="match_parent"
    android:layout_height="212dp"
    class="com.google.android.gms.maps.MapFragment" />
<Button
        android:id="@+id/info_btnNavigate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="導航" />

</LinearLayout>
</ScrollView>
